unpackaged/main/default/objects/bt_stripe__Blackthorn_Log__c/bt_stripe__Blackthorn_Log__c.object-meta.xml
<CustomObject>
    <description>Blackthorn Log records store application errors captured in our code as well as some batch job information.</description>
    <label>Blackthorn Log</label>
    <nameField>
        <displayFormat>BL-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blackthorn Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>