unpackaged/main/default/objects/bt_stripe__Blackthorn_Log__c/fields/bt_stripe__App__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__App__c</fullName>
    <inlineHelpText>The Blackthorn application this error originated from.</inlineHelpText>
    <label>App</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
                <default>true</default>
                <label>Payments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>