unpackaged/main/default/objects/bt_stripe__Blackthorn_Log__c/fields/bt_stripe__Location__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Location__c</fullName>
    <inlineHelpText>Location (Class) from where the Log record was created.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>