unpackaged/main/default/objects/bt_stripe__Blackthorn_Log__c/fields/bt_stripe__Message__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>