unpackaged/main/default/objects/bt_stripe__Blackthorn_Log__c/fields/bt_stripe__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Blackthorn Logs</relationshipLabel>
    <relationshipName>Blackthorn_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>