unpackaged/main/default/objects/bt_stripe__Blackthorn_Log__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Location__c</columns>
    <columns>bt_stripe__Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>bt_stripe__Payment_Method__c</columns>
    <columns>bt_stripe__Transaction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>